# ur5_gripper

./: .gitignore  README.md
jupyter/: BO_UR5 controller.ipynb  UR5_moveit_sample.ipynb  Untitled.ipynb  Untitled1.ipynb  turtlebot navigation.ipynb  ur5.ipynb
jupyter/.ipynb_checkpoints/: UR5_moveit_sample-checkpoint.ipynb
src/bo_ur5/: CMakeLists.txt  package.xml
src/bo_ur5/launch/: ur5e_af85.launch  ur5e_af85_upload.launch  ur5e_gazebo.launch  view_ur5e.launch
src/bo_ur5/urdf/: robotiq_coupler.xacro  ur5e_af85.urdf.xacro
src/bo_ur5e/: CMakeLists.txt  package.xml
src/bo_ur5e/launch/: ur5e_af85_upload.launch  ur5e_af85_upload_2.launch  view_ur5e.launch  view_ur5e_2.launch
src/bo_ur5e/urdf/: ur5e_af85.urdf.xacro  ur5e_af85_2.urdf.xacro
src/bo_ur5e_gazebo/: CMakeLists.txt  package.xml
src/bo_ur5e_gazebo/controller/: effector_controller.yaml
src/bo_ur5e_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/chester_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/chester_moveit_config2/: .setup_assistant  CMakeLists.txt  package.xml
src/chester_moveit_rg2/: .setup_assistant  CMakeLists.txt  package.xml
src/chester_moveit_rg22/: .setup_assistant  CMakeLists.txt  package.xml
src/robotiq/: README.md
src/robotiq/robotiq_2f_hardware/: package.xml
src/robotiq/robotiq_2f_hardware/src/: robotiq_2f_hw.cpp
src/ur5_gripper/: CMakeLists.txt  package.xml
src/ur5_gripper_moveit_config/: .setup_assistant  package.xml
src/ur5e_test_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ur5e_test_config/config/: ur5e.srdf  (+1 more)
(+166 files in other folders)
