<?xml version="1.0"?>
<package format="2">
  <name>robotiq_2f_hardware</name>
  <version>0.0.0</version>
  <description>The robotiq_2f_hardware package</description>

  <maintainer email="carlos@beta-robots.com">Carlos J. Rosales Gallegos</maintainer>

  <license>GPLv3</license>

  <url type="website">https://github.com/ros-industrial/robotiq</url>
  <url type="bugtracker">https://github.com/ros-industrial/robotiq</url>
  <url type="repository">https://github.com/ros-industrial/robotiq</url>


  <author email="carlos@beta-robots.com">Carlos J. Rosales Gallegos</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>transmission_interface</depend>
  <depend>urdf</depend>
  <depend>std_msgs</depend>
</package>